--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@u3u/vue-hooks": "^2.0.1",
+    "@vue/composition-api": "^0.3.2",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
