--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@u3u/vue-hooks": "^2.0.1",
     "@vue/composition-api": "^0.3.2",
+    "cheerio": "^1.0.0-rc.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^12.12.7",
     "@vue/cli-plugin-typescript": "^4.0.0",
     "@vue/cli-plugin-vuex": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
