--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/composition-api": "^0.3.2",
     "cheerio": "^1.0.0-rc.3",
     "downloadjs": "^1.4.7",
+    "js-file-downloader": "^1.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
