--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@u3u/vue-hooks": "^2.0.1",
-    "@vue/composition-api": "^0.3.2",
+    "@vue/composition-api": "^0.6.4",
     "cheerio": "^1.0.0-rc.3",
     "downloadjs": "^1.4.7",
     "js-file-downloader": "^1.1.4",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
@@ -25,7 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "typescript": "~3.5.3",
-    "vue-template-compiler": "^2.6.10"
+    "typescript": "^3.9.5",
+    "vue-template-compiler": "^2.6.11"
   }
 }
