--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "node"
+      "@types/node"
     ],
     "paths": {
       "@/*": [
