--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/cheerio": "^0.22.21",
     "@u3u/vue-hooks": "^2.0.1",
     "@vue/composition-api": "^0.6.4",
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "downloadjs": "^1.4.7",
     "js-file-downloader": "^1.1.4",
