--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "downloadjs": "^1.4.7",
-    "js-file-downloader": "^1.1.4",
+    "js-file-downloader": "1.1.4",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
@@ -29,7 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "typescript": "^3.9.5",
+    "typescript": "^4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
