--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "coursehunters-course-list-browser",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "rm -rf dist && vue-cli-service build",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
-    "@types/cheerio": "^0.22.21",
-    "@u3u/vue-hooks": "^2.0.1",
-    "@vue/composition-api": "^0.6.4",
-    "cheerio": "^1.0.0-rc.3",
-    "downloadjs": "^1.4.7",
-    "js-file-downloader": "1.1.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@vue/cli-plugin-typescript": "^4.5.4",
-    "@vue/cli-plugin-vuex": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
-    "html-webpack-inline-source-plugin": "^0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "typescript": "^4.1.5",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "name": "coursehunters-course-list-browser",
+    "version": "0.2.0",
+    "license": "MIT",
+    "description": "Web scrapping",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "serve": "vite preview",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.3",
+        "downloadjs": "^1.4.7",
+        "js-file-downloader": "1.1.4",
+        "tailwindcss": "^2.0.4",
+        "vue": "^3.0.5"
+    },
+    "devDependencies": {
+        "@tailwindcss/jit": "^0.1.5",
+        "@types/cheerio": "^0.22.21",
+        "@types/node": "^14.6.0",
+        "@vitejs/plugin-vue": "^1.1.5",
+        "@vue/compiler-sfc": "^3.0.5",
+        "autoprefixer": "^10.2.5",
+        "postcss": "^8.2.8",
+        "sass": "^1.32.8",
+        "typescript": "^4.1.3",
+        "vite": "^2.1.0",
+        "vue-tsc": "^0.0.8"
+    }
 }
