--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.2.5",
         "postcss": "^8.2.8",
+        "rollup-plugin-node-builtins": "^2.1.2",
         "sass": "^1.32.8",
         "typescript": "^4.1.3",
         "vite": "^2.1.0",
