--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cheerio": "^1.0.0-rc.3",
         "downloadjs": "^1.4.7",
         "js-file-downloader": "1.1.4",
+        "path-browserify": "^1.0.1",
         "tailwindcss": "^2.0.4",
         "vue": "^3.0.5"
     },
@@ -25,7 +26,6 @@
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.2.5",
         "postcss": "^8.2.8",
-        "rollup-plugin-node-builtins": "^2.1.2",
         "sass": "^1.32.8",
         "typescript": "^4.1.3",
         "vite": "^2.1.0",
