--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "esModuleInterop": true,
         "sourceMap": true,
         "baseUrl": ".",
-        "types": ["vite/client", "@types/node"],
+        "types": ["vite/client", "@types/node", "@types/cheerio"],
         "paths": {
             "@/*": [
                 "src/*"
