--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
         "js-file-downloader": "1.1.4",
         "path-browserify": "^1.0.1",
         "tailwindcss": "^2.0.4",
-        "vue": "^3.0.5"
+        "vue": "3.2.26"
     },
     "devDependencies": {
         "@tailwindcss/jit": "^0.1.5",
         "@types/cheerio": "^0.22.21",
         "@types/node": "^14.6.0",
-        "@vitejs/plugin-vue": "^1.1.5",
-        "@vue/compiler-sfc": "^3.0.5",
-        "autoprefixer": "^10.2.5",
-        "postcss": "^8.2.8",
-        "sass": "^1.32.8",
-        "typescript": "^4.1.3",
-        "vite": "^2.1.0",
+        "@vitejs/plugin-vue": "^2.0.1",
+        "@vue/compiler-sfc": "3.2.26",
+        "autoprefixer": "10.4.0",
+        "postcss": "8.4.5",
+        "sass": "1.45.0",
+        "typescript": "4.5.4",
+        "vite": "2.7.2",
         "vue-tsc": "^0.0.8"
     }
 }
