--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     },
     "devDependencies": {
         "@tailwindcss/jit": "^0.1.5",
-        "@types/cheerio": "^0.22.21",
-        "@types/node": "^14.6.0",
+        "@types/cheerio": "0.22.30",
+        "@types/node": "17.0.0",
         "@vitejs/plugin-vue": "^2.0.1",
         "@vue/compiler-sfc": "3.2.26",
         "autoprefixer": "10.4.0",
@@ -31,6 +31,6 @@
         "sass": "1.45.0",
         "typescript": "4.5.4",
         "vite": "2.7.2",
-        "vue-tsc": "^0.0.8"
+        "vue-tsc": "0.29.8"
     }
 }
