--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
         "downloadjs": "^1.4.7",
         "js-file-downloader": "1.1.24",
         "path-browserify": "^1.0.1",
-        "tailwindcss": "^2.0.4",
+        "tailwindcss": "3.0.5",
         "vue": "3.2.26"
     },
     "devDependencies": {
-        "@tailwindcss/jit": "^0.1.5",
         "@types/cheerio": "0.22.30",
         "@types/node": "17.0.0",
         "@vitejs/plugin-vue": "^2.0.1",
